--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@changesets/cli": "2.23.0",
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
+    "@yuukoyoung/eslint-config": "workspace:0.1.1",
+    "@yuukoyoung/prettier-config": "workspace:0.1.1",
     "commitizen": "4.2.4",
     "commitlint-config-cz": "0.13.3",
     "cz-customizable": "6.3.0",
