--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "lint": "pnpm run lint:eslint && pnpm run lint:prettier",
-    "lint:eslint": "eslint --fix \"**/*.{js,cjs,mjs,json,jsonc,json5}\"",
+    "lint:eslint": "eslint --fix \"**/*.{js,mjs,cjs,ts,json,jsonc,json5}\"",
     "lint:prettier": "prettier --write \"**/*.{js,mjs,cjs,ts,css,scss,less,json,jsonc,json5,md,html,vue,yml}\""
   },
   "config": {
@@ -35,6 +35,8 @@
     "@changesets/cli": "2.23.0",
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-conventional": "17.0.2",
+    "@typescript-eslint/eslint-plugin": "5.28.0",
+    "@typescript-eslint/parser": "5.28.0",
     "@yuukoyoung/eslint-config": "workspace:0.1.1",
     "@yuukoyoung/prettier-config": "workspace:0.1.1",
     "commitizen": "4.2.4",
@@ -47,7 +49,8 @@
     "eslint-plugin-prettier": "4.0.0",
     "only-allow": "1.1.0",
     "prettier": "2.6.2",
-    "simple-git-hooks": "2.8.0"
+    "simple-git-hooks": "2.8.0",
+    "typescript": "4.5.4"
   },
   "packageManager": "pnpm@7.1.1",
   "engines": {
