deps: use workspace:*

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@commitlint/config-conventional": "17.0.2",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
-    "@yuukoyoung/eslint-config": "workspace:0.1.1",
-    "@yuukoyoung/prettier-config": "workspace:0.1.1",
+    "@yuukoyoung/eslint-config": "workspace:*",
+    "@yuukoyoung/prettier-config": "workspace:*",
     "commitizen": "4.2.4",
     "commitlint-config-cz": "0.13.3",
     "cz-customizable": "6.3.0",
