--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -9,7 +9,11 @@
     "prettier",
     "prettierconfig"
   ],
-  "repository": "https://github.com/yuukoyoung/yuuko-monorepo/tree/main/packages/eslint-config",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yuukoyoung/yuuko-monorepo.git",
+    "directory": "packages/prettier-config"
+  },
   "bugs": "https://github.com/yuukoyoung/yuuko-monorepo/issues",
   "license": "MIT",
   "author": {
