--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": [
     "@changesets/changelog-github",
-    { "repo": "yuukoyoung/yuuko-monorepo" }
+    { "repo": "yuukoyoung/yuuko-design" }
   ],
   "commit": false,
   "fixed": [],
