--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@yuukoyoung/yuuko-monorepo",
+  "name": "@yuukoyoung/yuuko-design",
   "version": "0.0.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/yuukoyoung/yuuko-monorepo.git"
+    "url": "https://github.com/yuukoyoung/yuuko-design.git"
   },
-  "bugs": "https://github.com/yuukoyoung/yuuko-monorepo/issues",
+  "bugs": "https://github.com/yuukoyoung/yuuko-design/issues",
   "license": "MIT",
   "author": {
     "name": "yuuko",
