--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -27,5 +27,8 @@
   "main": "./src/index.cjs",
   "exports": {
     ".": "./src/index.cjs"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
