--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "lint": "pnpm run lint:eslint && pnpm run lint:prettier",
-    "lint:eslint": "eslint --fix \"**/*.{js,mjs,cjs,ts,json,jsonc,json5}\"",
+    "lint:eslint": "eslint --fix \"**/*.{js,mjs,cjs,ts,json,jsonc,json5,vue}\"",
     "lint:prettier": "prettier --write \"**/*.{js,mjs,cjs,ts,css,scss,less,json,jsonc,json5,md,html,vue,yml,yaml}\""
   },
   "config": {
@@ -47,10 +47,12 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-jsonc": "2.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-vue": "9.4.0",
     "only-allow": "1.1.0",
     "prettier": "2.6.2",
     "simple-git-hooks": "2.8.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "vue-eslint-parser": "9.0.3"
   },
   "packageManager": "pnpm@7.1.1",
   "engines": {
