--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsonc": "2.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "9.4.0",
+    "jsonc-eslint-parser": "2.1.0",
     "only-allow": "1.1.0",
     "prettier": "2.6.2",
     "simple-git-hooks": "2.8.0",
