--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsonc": "2.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "9.4.0",
+    "jsonc-eslint-parser": "2.1.0",
     "prettier": "2.6.2",
     "typescript": "4.5.4",
     "vue-eslint-parser": "9.0.3"
