--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,9 +4,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "description": "typescript utility library",
+  "description": "typescript utility for yuuko-design",
   "keywords": [
-    "types"
+    "types",
+    "utility"
   ],
   "repository": {
     "type": "git",
@@ -30,7 +31,9 @@
     "prepack": "pnpm run build"
   },
   "devDependencies": {
+    "@vueuse/core": "9.1.1",
     "rimraf": "3.0.2",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "vue": "3.2.25"
   }
 }
