--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -6,7 +6,7 @@
     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "target": "esnext",
     /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    "lib": ["esnext"],
+    "lib": ["esnext", "dom"],
     /* Enable experimental support for TC39 stage 2 draft decorators. */
     // "experimentalDecorators": true,
     /* Emit design-type metadata for decorated declarations in source files. */
