--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,9 +34,9 @@
   },
   "sideEffects": false,
   "scripts": {
-    "prebuild": "rimraf ./dist",
+    "clean": "rimraf ./dist",
     "build": "vite build && tsc --project ./tsconfig.build.json",
-    "prepack": "pnpm run build"
+    "prepack": "turbo run build --filter=@yuukoyoung/utils --cwd=../.."
   },
   "devDependencies": {
     "@types/node": "18.7.13",
