--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,13 @@
 engine-strict=true
 
-# pnpm
-strict-peer-dependencies=false
+# pnpm publish settings
 git-checks=false
 publish-branch=main
+
+# pnpm peer dependency settings
+strict-peer-dependencies=false
+
+# pnpm workspace settings
+link-workspace-packages=true
+shared-workspace-lockfile=true
+save-workspace-protocol=rolling
