test(utils): use vitest

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "fix:eslint": "pnpm run lint:eslint --fix",
     "fix:prettier": "pnpm run run:prettier --write",
     "clean": "turbo run clean",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "coverage": "turbo run coverage"
   },
   "config": {
     "commitizen": {
