--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -35,8 +35,8 @@
   },
   "sideEffects": false,
   "scripts": {
-    "clean": "rimraf ./dist",
     "build": "vite build && tsc --project ./tsconfig.build.json",
+    "build:clean": "rimraf ./dist",
     "prepack": "turbo run build --filter=@yuukoyoung/composables --cwd=../.."
   },
   "dependencies": {
