--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,14 +34,24 @@
   },
   "sideEffects": false,
   "scripts": {
-    "clean": "rimraf ./dist",
     "build": "vite build && tsc --project ./tsconfig.build.json",
-    "prepack": "turbo run build --filter=@yuukoyoung/utils --cwd=../.."
+    "build:clean": "rimraf ./dist",
+    "prepack": "turbo run build --filter=@yuukoyoung/utils --cwd=../..",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:clean": "vitest clean cache",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@types/jsdom": "20.0.0",
     "@types/node": "18.7.13",
+    "@vitest/coverage-c8": "0.23.1",
+    "@vitest/ui": "0.23.1",
+    "jsdom": "20.0.0",
     "rimraf": "3.0.2",
     "typescript": "4.5.4",
-    "vite": "2.9.9"
+    "vite": "2.9.9",
+    "vitest": "0.23.1"
   }
 }
