--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-jsonc": "2.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-vue": "9.4.0",
+    "jsdom": "20.0.0",
     "jsonc-eslint-parser": "2.1.0",
     "lint-staged": "13.0.3",
     "only-allow": "1.1.0",
