--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "node": ">=14.19.1"
   },
   "simple-git-hooks": {
-    "pre-commit": "lint-staged",
+    "pre-commit": "pnpm exec lint-staged",
     "commit-msg": "pnpm exec commitlint -e -V"
   },
   "lint-staged": {
