--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -37,7 +37,12 @@
   "scripts": {
     "build": "vite build && tsc --project ./tsconfig.build.json",
     "build:clean": "rimraf ./dist",
-    "prepack": "turbo run build --filter=@yuukoyoung/composables --cwd=../.."
+    "prepack": "turbo run build --filter=@yuukoyoung/composables --cwd=../..",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:clean": "vitest clean cache",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@vueuse/core": "9.1.1",
@@ -47,8 +52,11 @@
   "devDependencies": {
     "@types/node": "18.7.13",
     "@yuukoyoung/types": "workspace:*",
+    "@vitest/coverage-c8": "0.23.1",
+    "@vitest/ui": "0.23.1",
     "rimraf": "3.0.2",
     "typescript": "4.5.4",
-    "vite": "2.9.9"
+    "vite": "2.9.9",
+    "vitest": "0.23.1"
   }
 }
