--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -26,9 +26,11 @@
   ],
   "main": "./src/index.cjs",
   "exports": {
-    ".": "./src/index.cjs"
+    ".": "./src/index.cjs",
+    "./tailwindcss": "./src/tailwindcss.cjs"
   },
   "devDependencies": {
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "0.1.13"
   }
 }
