--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss": "8.4.16",
     "postcss-html": "1.5.0",
     "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "0.1.13",
     "simple-git-hooks": "2.8.0",
     "stylelint": "14.12.0",
     "stylelint-config-prettier-scss": "0.0.1",
