--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "simple-git-hooks": "2.8.0",
     "stylelint": "14.12.0",
     "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-recommended-scss": "8.0.0",
     "stylelint-config-standard-scss": "5.0.0",
     "stylelint-config-standard-vue": "1.0.0",
     "turbo": "1.4.5",
