ci: enable storybook workflow to be triggered manually

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - '@yuukoyoung/yuuko-ui@*'
+  workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
