--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm run storybook:build
+        run: pnpm run --filter=yuuko-ui storybook:build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
