--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: storybook-pages
-          publish_dir: ./storybook-static
+          publish_dir: ./packages/yuuko-ui/storybook-static
