--- a/packages/yuuko-ui/package.json
+++ b/packages/yuuko-ui/package.json
@@ -32,7 +32,8 @@
       "require": "./dist/yuuko-ui.cjs.js",
       "import": "./dist/yuuko-ui.es.js"
     },
-    "./css": "./dist/yuuko-ui.css"
+    "./css": "./dist/yuuko-ui.css",
+    "./global": "./global.d.ts"
   },
   "sideEffects": false,
   "scripts": {
@@ -63,7 +64,7 @@
     "@storybook/vue3-vite": "7.0.6",
     "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
     "@types/node": "18.7.13",
-    "@vitejs/plugin-vue": "3.1.0",
+    "@vitejs/plugin-vue": "3.2.0",
     "autoprefixer": "10.4.11",
     "http-server": "14.1.1",
     "postcss": "8.4.16",
@@ -74,7 +75,8 @@
     "storybook": "7.0.6",
     "tailwindcss": "3.2.4",
     "typescript": "4.5.4",
-    "vite": "3.1.0",
-    "vue-tsc": "1.0.5"
+    "vite": "3.2.0",
+    "vite-plugin-static-copy": "0.14.0",
+    "vue-tsc": "1.6.3"
   }
 }
