--- a/packages/yuuko-ui/tsconfig.json
+++ b/packages/yuuko-ui/tsconfig.json
@@ -23,8 +23,9 @@
     // "baseUrl": "./",
     /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "paths": {},
-    /* Specify type package names to be included without being referenced in a source file. */
-    // "types": [],
+    /* Specify type package names to be included without being referenced in a source file. */ "types": [
+      "vite/client"
+    ],
     /* Specify multiple folders that act like `./node_modules/@types`. */
     // "typeRoots": [],
 
