--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -24,18 +24,12 @@
     "**/dist",
     "CHANGELOG.md"
   ],
-  "main": "./dist/composables.cjs.js",
-  "module": "./dist/composables.es.js",
-  "types": "./dist/types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/composables.cjs.js",
-      "import": "./dist/composables.es.js"
-    }
-  },
+  "main": "./dist/lib/index.js",
+  "module": "./dist/es/index.mjs",
+  "types": "./dist/es/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "vite build && tsc --project ./tsconfig.build.json",
+    "build": "vite build",
     "build:clean": "rimraf ./dist",
     "prepack": "turbo run build --filter=@yuukoyoung/composables --cwd=../..",
     "test": "vitest run",
@@ -55,8 +49,9 @@
     "@vitest/ui": "0.23.1",
     "@yuukoyoung/types": "workspace:*",
     "rimraf": "3.0.2",
-    "typescript": "4.5.4",
+    "typescript": "5.0.4",
     "vite": "3.2.0",
+    "vite-plugin-dts": "2.3.0",
     "vitest": "0.23.1"
   }
 }
