--- a/packages/composables/tsconfig.json
+++ b/packages/composables/tsconfig.json
@@ -24,7 +24,7 @@
     /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "paths": {},
     /* Specify type package names to be included without being referenced in a source file. */
-    // "types": [],
+    "types": ["vite/client"],
     /* Specify multiple folders that act like `./node_modules/@types`. */
     // "typeRoots": [],
 
