--- a/packages/headless-ui/package.json
+++ b/packages/headless-ui/package.json
@@ -23,24 +23,16 @@
     "**/dist",
     "CHANGELOG.md"
   ],
-  "main": "./dist/headless-ui.cjs.js",
-  "module": "./dist/headless-ui.es.js",
-  "browser": "./dist/headless-ui.umd.js",
-  "types": "./dist/types/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/headless-ui.cjs.js",
-      "import": "./dist/headless-ui.es.js"
-    }
-  },
+  "main": "./dist/lib/index.js",
+  "module": "./dist/es/index.mjs",
+  "types": "./dist/es/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "vue-tsc --noEmit && vite build && vue-tsc --project tsconfig.build.json",
+    "build": "vue-tsc --noEmit && vite build",
     "build:clean": "rimraf ./dist",
     "prepack": "turbo run build --filter=@yuukoyoung/headless-ui --cwd=../.."
   },
   "dependencies": {
-    "@vue/reactivity": "3.2.25",
     "@yuukoyoung/composables": "workspace:*",
     "@yuukoyoung/utils": "workspace:*",
     "vue": "3.2.25"
@@ -49,8 +41,9 @@
     "@types/node": "18.7.13",
     "@vitejs/plugin-vue": "3.1.2",
     "rimraf": "3.0.2",
-    "typescript": "4.5.4",
+    "typescript": "5.0.4",
     "vite": "3.2.0",
-    "vue-tsc": "1.0.5"
+    "vite-plugin-dts": "2.3.0",
+    "vue-tsc": "1.6.3"
   }
 }
