--- a/packages/headless-ui/tsconfig.node.json
+++ b/packages/headless-ui/tsconfig.node.json
@@ -14,6 +14,6 @@
     /* Specify the root folder within your source files. */
     "rootDir": ".",
     /* Specify type package names to be included without being referenced in a source file. */
-    "types": ["vite/client", "node"]
+    "types": ["node"]
   }
 }
