--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -27,6 +27,12 @@
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.mjs",
   "types": "./dist/es/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/es/index.mjs",
+      "require": "./dist/lib/index.js"
+    }
+  },
   "sideEffects": false,
   "scripts": {
     "build": "vite build",
