--- a/packages/yuuko-ui/tsconfig.json
+++ b/packages/yuuko-ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types"],
+  "include": ["src", "types", "global.d.ts"],
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     /* Language and Environment */
